--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
   <link rel="stylesheet" href="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.min.css">
   <!-- custom -->
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
