--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,10 @@
   <script src="route.js"></script>
   <script src="app.js"></script>
 
-
+  <!-- Servicios -->
+<script src="components/services/imagen.service.js"></script>
+<script src="components/services/jugadores.service.js"></script>
+<script src="components/services/propiedades.service.js"></script>
 
 
 </body>
