estilos y el index actualizado

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Proyecto Web 1 - Examen</title>
+  <title>Examen Josué B</title>
 
   <!-- fontawesome -->
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
@@ -46,6 +46,10 @@
   <script src="app.js"></script>
 
 
+  <!-- Servicios -->
+  <script src="components/services/image.service.js"></script>
+  <script src="components/services/properties.service.js"></script>
+  <script src="components/services/players.service.js"></script>
 
 
 </body>
